--- a/practicas/p05/formulario.html
+++ b/practicas/p05/formulario.html
@@ -33,18 +33,18 @@
 
     <p>Color <em>(escoge uno)</em>:</p>
       <ul>
-      <li>Rojo</li>
-      <li>Azul</li>
-      <li>Negro</li>
-      <li>Plateado</li>
+      <li><input type="radio" name="color" value="red">Rojo</li>
+      <li><input type="radio" name="color" value="blue">Azul</li>
+      <li><input type="radio" name="color" value="black">Negro</li>
+      <li><input type="radio" name="color" value="silver">Plateado</li>
       </ul>
 
     <p>Características <em>(escoge tantas como quieras)</em>:</p>
       <ul>
-      <li>Cordones brillantes</li>
-      <li>Logo metálico</li>
-      <li>Suela luminosa</li>
-      <li>WiFi integrado</li>
+      <li><input type="checkbox" name="cordon brillante" value="cordon">Cordones brillantes</li>
+      <li><input type="checkbox" name="features[]" value="laces" checked>Logo metálico</li>
+      <li><input type="checkbox" name="suela luminosa" value="suela">Suela luminosa</li>
+      <li><input type="checkbox" name="wifi integrado" value="wifi">WiFi integrado</li>
       </ul>
 
     <p>Talla</p>
