--- a/practicas/p05/formulario.html
+++ b/practicas/p05/formulario.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8" >
     <title>Registro al Concurso</title>
     <style type="text/css">
-        ol, ul { 
-      list-style-type: none;
-        }
+      body { font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; max-width: 900px; margin: 24px auto; padding: 0 12px; }
+        ul { list-style-type: none; padding-left: 0;}
+        legend {font-weight: bold; }
+        fieldset { margin-top: 16px; padding: 15px; }
+        li { margin: 10px 0; }
+        label { display: inline-block; width: 160px; }
+        .actions { margin-top: 12px; }
     </style>
   </head>
 
@@ -79,7 +83,10 @@
            </fieldset>
         </fieldset>
 
-    <p><input type="submit"> <input type="reset"></p>
+    <p class="actions">
+        <input type="submit" value="Enviar formulario"> 
+        <input type="reset" value="Restablecer">
+    </p>
     </form>
 
   </body>
